@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-11581.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-11584.tgz',
      'xapian-core.tgz',
-     'a14920877ad21513f0ac611f2e368d9fa067179c',
+     'df3b75854a95aa2bc72359802423462d2abc28ff',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-11581.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-11584.tgz',
      'xapian-bindings.tgz',
-     '55ae5ed50f406ef593c1701477f90bfcbd274ec6',
+     '8f96679da71a75740ed2dede87653c10b302eda9',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-11581.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-11584.tgz',
      'win32msvc.tgz',
-     '0e6798cbcc885277790895af401eddd0c9e6dd4a',
+     '46e30a93c1f0ccb1583d7c81baedf28debf0317e',
      'xapian-core/win32',
     ),
 )
