@@ -1,3 +1,14 @@
+Fri Oct 31 11:27:07 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: Update to new version of packages (11584).
+	* xappy/searchconnection.py: Use the newly added
+	  FixedWeightPostingSource to provide weights for
+	  query_difference(), to fix regression introduced with the last
+	  xapian packages (due to query_all() no longer returning non-zero
+	  weights).  This is a more efficient implementation, anyway, since
+	  the matcher will usually not need to check for documents
+	  existing.
+
 Thu Oct 30 21:20:30 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py,utils/make_xappy_tarballs: Update xapian
